--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color:rgb(255, 238, 0);
+    --card-front-color: #48fe00;
+    --card-back-color: #ffffff;
 }
 
 body {
@@ -77,7 +77,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
+    background-color: rgb(28, 251, 4);
     border: 4px solid var(--card-back-color);
 }
 
