--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color:rgb(255, 238, 0);
-    --card-front-color: #48fe00;
-    --card-back-color: #ffffff;
+    --text-color:rgb(9, 255, 0);
+    --card-front-color: #fef600;
+    --card-back-color: #0400ff;
 }
 
 body {
@@ -82,7 +82,7 @@ body {
 }
 
 footer {
-    background-color: black;
+    background-color: rgb(0, 4, 255);
     color: white;
     position: fixed;
     bottom: 0;
