--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color:rgb(9, 255, 0);
-    --card-front-color: #fef600;
+    --card-front-color: #fff823;
     --card-back-color: #0400ff;
 }
 
